--- a/NoSTORE/wwwroot/css/general.css
+++ b/NoSTORE/wwwroot/css/general.css
@@ -10,24 +10,26 @@ section:not(:last-child) {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 1.5rem;
 }
 .main_functions .functions__mobile {
   background: url(../photos/Phone.png) no-repeat center center;
-  height: 359px;
-  width: 474px;
-  background-size: cover;
-  padding: 8px;
   border-radius: 10px;
+  padding: 8px;
+  background-size: cover;
+  width: 90vw;
+  max-width: 474px;
+  aspect-ratio: 474/359;
 }
 .main_functions .functions__mobile h2 {
   font-family: "Strong", sans-serif;
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: 0;
   color: #E0E0E0;
 }
 .main_functions .functions__mobile p {
   font-family: "Strong", sans-serif;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 0;
   color: #adadad;
 }
@@ -42,11 +44,11 @@ section:not(:last-child) {
 .main_functions .functions__funcs {
   display: flex;
   align-items: center;
-  gap: 3rem;
+  gap: 2.1rem;
   border: 5px solid #3F3F46;
-  height: 359px;
   border-radius: 8px;
-  padding: 20px;
+  padding: 1rem;
+  width: 100%;
 }
 .main_functions .functions__funcs a {
   transition: 0.2s ease;
@@ -58,7 +60,8 @@ section:not(:last-child) {
 }
 .main_functions .functions__funcs div {
   padding: 0.6rem;
-  width: 13rem;
+  max-width: 15rem;
+  width: 100%;
   height: 315px;
   border-radius: 10px;
 }
@@ -71,21 +74,21 @@ section:not(:last-child) {
 }
 .main_functions .functions__funcs div p {
   font-family: "Strong", sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 0;
   color: #adadad;
 }
 .main_functions .functions__funcs .functions__catalog {
-  background: url(../photos/basket.png);
+  background: url(../photos/basket.png) no-repeat center center;
 }
 .main_functions .functions__funcs .functions__recs {
-  background: url("../photos/blue heart.png");
+  background: url("../photos/blue heart.png") no-repeat center center;
 }
 .main_functions .functions__funcs .functions__buildpc {
-  background: url("../photos/PC.png");
+  background: url("../photos/PC.png") no-repeat center center;
 }
 .main_functions .functions__funcs .functions__discounts {
-  background: url("../photos/gamepad.png");
+  background: url("../photos/gamepad.png") no-repeat center center;
 }
 
 .section__title {
@@ -131,9 +134,9 @@ section:not(:last-child) {
 .product {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  padding: 0.6rem;
+  background-color: #3F3F46;
   border-radius: 10px;
+  padding: 10px;
   transition: 0.2s ease;
 }
 .product:hover {
@@ -142,43 +145,32 @@ section:not(:last-child) {
   box-shadow: 0px 0px 26px 5px rgba(63, 104, 135, 0.18);
   transform: translateY(-5px);
 }
-.product:hover .product__about {
-  background-color: rgb(120.7572115385, 177.7884615385, 206.7427884615) !important;
+.product a {
+  text-decoration: none;
+  color: none;
 }
-.product .product__image {
+.product a .main_image {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.product .product__image::after {
+.product a .main_image img {
+  width: 14rem;
+  height: 14rem;
+  object-fit: scale-down;
+}
+.product a .main_image::after {
   content: "";
   display: block;
   width: 100%;
   height: 3px;
   background-color: #26262B;
   border-radius: 5px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-.product .product__image img {
-  height: 240px;
-  max-width: 100%;
-}
-.product .product__rating {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2px;
-}
-.product .product__rating img {
-  height: 35px;
-}
-.product .product__rating p {
-  font-size: 32px;
-  color: #3ABBD1;
-}
-.product h3 {
+.product a .product__name {
   display: -webkit-box;
   max-width: 400px;
   -webkit-line-clamp: 2;
@@ -186,75 +178,97 @@ section:not(:last-child) {
   overflow: hidden;
   text-overflow: ellipsis;
   font-family: "Strong", sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 0;
   color: #E0E0E0;
-  margin-bottom: 1rem;
 }
-.product p {
+.product a .product__tags {
   font-family: "Strong", sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 0;
   color: rgb(147.5, 147.5, 147.5);
+  margin-bottom: 1.5rem;
 }
-.product .product__tags {
-  height: 6rem;
-  margin-bottom: 2rem;
-}
-.product .product__rating {
-  background-color: #26262B;
-  border-radius: 8px;
-  margin-bottom: 1.2rem;
-}
-.product .product__activity {
+.product a .product__info {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
+  background-color: #26262B;
+  border-radius: 5px;
+  color: #3ABBD1;
+  padding: 3px;
+  gap: 10px;
+  font-family: "Strong", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 0;
+  margin-bottom: 10px;
 }
-.product .product__activity p {
-  font-size: 2.5rem;
+.product a .product__info div {
+  display: flex;
+  gap: 5px;
+}
+.product .product__about {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.product .product__about span {
+  font-family: "Strong", sans-serif;
+  font-size: 1.9rem;
+  font-weight: 0;
   color: #3ABBD1;
 }
-.product .product__activity .product__buttons {
+.product .product__about .product__activity {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  gap: 1.6rem;
+  gap: 3px;
 }
-.product .product__activity .product__buttons button {
-  background-color: #66A7C8;
-  border-radius: 4px;
+.product .product__about .product__activity button {
+  background: none;
+  outline: none;
   border: none;
-}
-.product .product__activity .product__buttons button:hover > img {
-  padding: 4px;
-}
-.product .product__activity .product__buttons button img {
-  transition: 0.1s ease;
-  height: 50px;
-  padding: 7px;
-}
-.product .product__activity .product__price p:first-child {
-  font-size: 1.6rem;
-  color: #66A7C8;
-  text-decoration: line-through;
-  height: 30px;
-}
-.product .product__activity .product__about {
-  font-family: "Strong", sans-serif;
-  font-size: 1.6rem;
-  font-weight: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #66A7C8;
-  padding: 5px;
-  border-radius: 6px;
-  height: 55px;
-  margin-top: 23px;
-  transition: 0.2s ease;
+  border-radius: 5px;
+  padding: 8px;
 }
-.product .product__activity .product__about span {
-  color: #26262B;
+.product .product__about .product__activity button svg {
+  overflow: visible;
+  width: 1.8rem;
+  height: 1.8rem;
+}
+.product .product__about .product__activity button svg path {
+  stroke: #66A7C8;
+  stroke-width: 3px;
+  fill: transparent;
+  transition: 0.1s ease;
+}
+.product .product__about .product__activity button svg g path {
+  stroke-width: 2px;
+  transition: 0.1s ease;
+}
+.product .product__about .product__activity .favorite:hover svg path, .product .product__about .product__activity .basket:hover svg path {
+  fill: #66A7C8;
+}
+.product .product__about .product__activity .compare:hover svg g path {
+  stroke-width: 3px;
+}
+.product .product__about .product__activity .favorite.active, .product .product__about .product__activity .basket.active {
+  background: #26262B;
+}
+.product .product__about .product__activity .favorite.active svg path, .product .product__about .product__activity .basket.active svg path {
+  fill: #66A7C8;
+}
+.product .product__about .product__activity .compare.active {
+  background: #26262B;
+}
+.product .product__about .product__activity .compare.active svg g path {
+  stroke-width: 3px;
 }
 
 .news {
