--- a/NoSTORE/wwwroot/css/products.css
+++ b/NoSTORE/wwwroot/css/products.css
@@ -5,17 +5,16 @@
 .show-button {
   position: absolute;
   margin-left: 20px;
-  background: #3F3F46;
+  background: #66A7C8;
+  color: #26262B;
   z-index: 100;
   padding: 1rem;
+  font-size: 1.3rem;
   border-radius: 6px;
   -webkit-box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
   -moz-box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
   box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
-  transition: background 0.2s ease;
-}
-.show-button:hover {
-  background: #26262B;
+  border: none;
 }
 
 .products {
