--- a/NoSTORE/wwwroot/scss/general.scss
+++ b/NoSTORE/wwwroot/scss/general.scss
@@ -8,22 +8,24 @@ section:not(:last-child) {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 1.5rem;
 
     .functions__mobile {
         background: url(../photos/Phone.png) no-repeat center center;
-        height: 359px;
-        width: 474px;
-        background-size: cover;
-        padding: 8px;
         border-radius: 10px;
+        padding: 8px;
+        background-size: cover;
+        width: 90vw;
+        max-width: 474px;
+        aspect-ratio: 474 / 359;
 
         h2 {
-            @include variables.font($size: 2rem);
+            @include variables.font($size: 1.7rem);
             color: variables.$text-color;
         }
 
         p {
-            @include variables.font($size: 1.7rem);
+            @include variables.font($size: 1.5rem);
             color: darken(variables.$text-color, 20%);
 
             a {
@@ -41,11 +43,11 @@ section:not(:last-child) {
     .functions__funcs {
         display: flex;
         align-items: center;
-        gap: 3rem;
+        gap: 2.1rem;
         border: 5px solid variables.$block-color;
-        height: 359px;
         border-radius: 8px;
-        padding: 20px;
+        padding: 1rem;
+        width: 100%;
 
         a {
             transition: 0.2s ease;
@@ -59,7 +61,8 @@ section:not(:last-child) {
 
         div {
             padding: 0.6rem;
-            width: 13rem;
+            max-width: 15rem;
+            width: 100%;
             height: 315px;
             border-radius: 10px;
 
@@ -70,25 +73,25 @@ section:not(:last-child) {
             }
 
             p {
-                @include variables.font($size: 1.1rem);
+                @include variables.font($size: 1.2rem);
                 color: darken(variables.$text-color, 20%);
             }
         }
 
         .functions__catalog {
-            background: url(../photos/basket.png)
+            background: url(../photos/basket.png) no-repeat center center;
         }
 
         .functions__recs {
-            background: url('../photos/blue heart.png')
+            background: url('../photos/blue heart.png') no-repeat center center;
         }
 
         .functions__buildpc {
-            background: url('../photos/PC.png')
+            background: url('../photos/PC.png') no-repeat center center;
         }
 
         .functions__discounts {
-            background: url('../photos/gamepad.png')
+            background: url('../photos/gamepad.png') no-repeat center center;
         }
     }
 }
@@ -140,9 +143,9 @@ section:not(:last-child) {
 .product {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    padding: 0.6rem;
+    background-color: variables.$block-color;
     border-radius: 10px;
+    padding: 10px;
     transition: 0.2s ease;
 
     &:hover {
@@ -152,132 +155,159 @@ section:not(:last-child) {
         transform: translateY(-5px);
     }
 
-    &:hover .product__about {
-        background-color: lighten(variables.$additional-color, 5%) !important;
-    }
+    a {
+        text-decoration: none;
+        color: none;
 
-    .product__image {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        &::after {
-            content: '';
-            display: block;
-            width: 100%;
-            height: 3px;
-            background-color: variables.$bg-color;
-            border-radius: 5px;
-            margin-top: 15px;
-            margin-bottom: 15px;
-        }
-
-        img {
-            height: 240px;
-            max-width: 100%;
-        }
-    }
-
-    .product__rating {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 2px;
-
-        img {
-            height: 35px;
-        }
-
-        p {
-            font-size: 32px;
-            color: variables.$accent-color;
-        }
-    }
-
-    h3 {
-        display: -webkit-box;
-        max-width: 400px;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        @include variables.font($size: 1.8rem);
-        color: variables.$text-color;
-        margin-bottom: 1rem;
-    }
-
-    p {
-        @include variables.font($size: 1.4rem);
-        color: darken(variables.$text-color, 30%);
-    }
-
-    .product__tags {
-        height: 6rem;
-        margin-bottom: 2rem;
-    }
-
-    .product__rating {
-        background-color: variables.$bg-color;
-        border-radius: 8px;
-        margin-bottom: 1.2rem;
-    }
-
-    .product__activity {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        p {
-            font-size: 2.5rem;
-            color: variables.$accent-color;
-        }
-
-        .product__buttons {
+        .main_image {
             display: flex;
-            align-items: center;
-            gap: 1.6rem;
-
-            button {
-                background-color: variables.$additional-color;
-                border-radius: 4px;
-                border: none;
-
-                &:hover > img {
-                    padding: 4px;
-                }
-
-                img {
-                    transition: 0.1s ease;
-                    height: 50px;
-                    padding: 7px;
-                }
-            }
-        }
-
-        .product__price {
-            p:first-child {
-                font-size: 1.6rem;
-                color: variables.$additional-color;
-                text-decoration: line-through;
-                height: 30px;
-            }
-        }
-
-        .product__about {
-            @include variables.font($size: 1.6rem);
-            display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: variables.$additional-color;
-            padding: 5px;
-            border-radius: 6px;
-            height: 55px;
-            margin-top: 23px;
-            transition: 0.2s ease;
 
-            span {
-                color: variables.$bg-color;
+            img {
+                width: 14rem;
+                height: 14rem;
+                object-fit: scale-down;
+            }
+
+            &::after {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 3px;
+                background-color: variables.$bg-color;
+                border-radius: 5px;
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+        }
+
+        .product__name {
+            display: -webkit-box;
+            max-width: 400px;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            @include variables.font($size: 1.6rem);
+            color: variables.$text-color;
+        }
+
+        .product__tags {
+            @include variables.font($size: 1.2rem);
+            color: darken(variables.$text-color, 30%);
+            margin-bottom: 1.5rem;
+        }
+
+        .product__info {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            background-color: variables.$bg-color;
+            border-radius: 5px;
+            color: variables.$accent-color;
+            padding: 3px;
+            gap: 10px;
+            @include variables.font($size: 1.5rem);
+            margin-bottom: 10px;
+
+            div {
+                display: flex;
+                gap: 5px;
+            }
+        }
+    }
+
+    .product__about {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        span {
+            @include variables.font($size: 1.9rem);
+            color: variables.$accent-color;
+        }
+
+        .product__activity {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 3px;
+
+            button {
+                background: none;
+                outline: none;
+                border: none;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 5px;
+                padding: 8px;
+
+                svg {
+                    overflow: visible;
+                    width: 1.8rem;
+                    height: 1.8rem;
+
+                    path {
+                        stroke: variables.$additional-color;
+                        stroke-width: 3px;
+                        fill: transparent;
+                        transition: 0.1s ease;
+                    }
+
+                    g {
+                        path {
+                            stroke-width: 2px;
+                            transition: 0.1s ease;
+                        }
+                    }
+                }
+            }
+
+            .favorite:hover, .basket:hover {
+                svg {
+
+                    path {
+                        fill: variables.$additional-color;
+                    }
+                }
+            }
+
+            .compare:hover {
+                svg {
+                    g {
+                        path {
+                            stroke-width: 3px;
+                        }
+                    }
+                }
+            }
+
+            .favorite.active, .basket.active {
+                background: variables.$bg-color;
+
+                svg {
+                    path {
+                        fill: variables.$additional-color;
+                    }
+                }
+            }
+
+            .compare.active {
+                background: variables.$bg-color;
+
+                svg {
+                    g {
+                        path {
+                            stroke-width: 3px;
+                        }
+                    }
+                }
             }
         }
     }
