--- a/NoSTORE/wwwroot/scss/products.scss
+++ b/NoSTORE/wwwroot/scss/products.scss
@@ -3,18 +3,16 @@
 .show-button {
     position: absolute;
     margin-left: 20px;
-    background: variables.$block-color;
+    background: variables.$additional-color;
+    color: variables.$bg-color;
     z-index: 100;
     padding: 1rem;
+    font-size: 1.3rem;
     border-radius: 6px;
     -webkit-box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
     -moz-box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
     box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
-    transition: background 0.2s ease;
-
-    &:hover {
-        background: variables.$bg-color;
-    }
+    border: none;
 }
 
 .products {
